unknow-http: add session & cookie support, improve param handling